@@ -30,7 +30,7 @@ require AutoLoader;
       ConfigureError FatalErrorException
     );
 
-$VERSION = '6.5.7';
+$VERSION = '6.5.8';
 
 sub AUTOLOAD {
     # This AUTOLOAD is used to 'autoload' constants from the constant()
@@ -109,8 +109,12 @@ It was originally developed to be used by CGI scripts for Web pages.
 
 A Web page has been set up for this extension. See:
 
-	 file:///usr/local/share/doc/ImageMagick-6.5.7/www/perl-magick.html
+	 file:///usr/local/share/doc/ImageMagick-6.5.8/www/perl-magick.html
 	 http://www.imagemagick.org/script/perl-magick.php
+
+If you have problems, go to
+
+   http://www.imagemagick.org/discourse-server/viewforum.php?f=7
 
 =head1 AUTHOR
 
