@@ -1,8 +1,7 @@
 package
-%
   Turtle;
 
-# Written by jreed@itis.com, adapted by John Cristy.
+# Written by jreed@itis.com, adapted by Cristy.
 
 sub new
 {
