@@ -1,3 +1,10 @@
+2009-11-23  6.5.8-0 Cristy  <quetzlzacatenango@image...>
+  * Add 'dither' option to Remap().
+
+2009-10-18  6.5.7-0 Cristy  <quetzlzacatenango@image...>
+  * Interpret gravity properly for ExtentImage().
+  * Support the  Modulate() method parameter, 'lightness.'
+
 2009-10-08  6.5.6-10 <kmx@volny...>
   * Improve PerlMagick.PL to work with Strawberry Perl under Windows.
 
